@@ -655,132 +655,7 @@ class dmailer extends t3lib_htmlmail {
                  }
                  $this->add_header("Mime-Version: 1.0");
          }
-
-	function constructHTML ($boundary)      {
-                 if (count($this->theParts["html"]["media"]))    {       // If media, then we know, the multipart/related content-type has been set before this function call...
-                         $this->add_message("--".$boundary);
-                         // HTML has media
-                         $newBoundary = $this->getBoundary();
-                         $this->add_message("Content-Type: multipart/alternative;");
-                         $this->add_message(' boundary="'.$newBoundary.'"');
-
-// <Set encoding of media files>
-                         $this->add_message("Content-Transfer-Encoding: 7bit");
-// </Set encoding of media files>
-                         $this->add_message('');
-                         $this->constructAlternative($newBoundary);      // Adding the plaintext/html mix
-                         $this->constructHTML_media($boundary);
-                 } else {
-                         $this->constructAlternative($boundary); // Adding the plaintext/html mix, and if no media, then use $boundary instead of $newBoundary
-                 }
-         }
-
-	function substMediaNamesInHTML($absolute)       {
-		// This substitutes the media-references in $this->theParts["html"]["content"]
-		// If $absolute is true, then the refs are substituted with http:// ref's indstead of Content-ID's (cid).
-		if (is_array($this->theParts["html"]["media"])) {
-                         reset ($this->theParts["html"]["media"]);
-                         while (list($key,$val) = each ($this->theParts["html"]["media"]))       {
-                                  if ($val["use_jumpurl"] && $this->jumperURL_prefix)     {
-
-                                           $theSubstVal = $this->jumperURL_prefix.$this->ux_translate_uri($val["absRef"]);
-               //                          $theSubstVal = $this->jumperURL_prefix.rawurlencode($val["absRef"]);
-                                  } else {
-                                           $theSubstVal = ($absolute) ? $val["absRef"] : "cid:part".$key.".".$this->messageid;
-                                  }
-                                  $this->theParts["html"]["content"] = str_replace(
-                                           $val["subst_str"], 
-                                           $val["quotes"].$theSubstVal.$val["quotes"],
-                                           $this->theParts["html"]["content"]      );
-                         }
-		}
-		if (!$absolute) {
-                         $this->fixRollOvers();
-		}
-	}
-
-	function substHREFsInHTML()	{
-		// This substitutes the hrefs in $this->theParts["html"]["content"]
-		if (is_array($this->theParts["html"]["hrefs"]))	{
-
-			reset ($this->theParts["html"]["hrefs"]);
-			while (list($key,$val) = each ($this->theParts["html"]["hrefs"]))	{
-
-				if ($this->jumperURL_prefix && $val["tag"]!="form")	{	// Form elements cannot use jumpurl!
-					if ($this->jumperURL_useId)	{
-						$theSubstVal = $this->jumperURL_prefix.$key;
-					} else {
-
-						$theSubstVal = $this->jumperURL_prefix.$this->ux_translate_uri($val["absRef"]);
-               //                               $theSubstVal = $this->jumperURL_prefix.rawurlencode($val["absRef"]);
-					}
-				} else {
-					$theSubstVal = $val["absRef"];
-				}
-				$this->theParts["html"]["content"] = str_replace(
-						$val["subst_str"], 
-						$val["quotes"].$theSubstVal.$val["quotes"],
-						$this->theParts["html"]["content"]	);
-			}
-		}
-	}
-
-	function substHTTPurlsInPlainText($content)	{
-		// This substitutes the http:// urls in plain text with links 
-		if ($this->jumperURL_prefix)	{
-			$textpieces = explode("http://", $content);
-			$pieces = count($textpieces);
-			$textstr = $textpieces[0];
-			for($i=1; $i<$pieces; $i++)	{
-				$len=strcspn($textpieces[$i],chr(32).chr(9).chr(13).chr(10));
-				if (trim(substr($textstr,-1))=="" && $len)	{
-					$lastChar=substr($textpieces[$i],$len-1,1);
-					if (!ereg("[A-Za-z0-9\/#]",$lastChar)) {$len--;}		// Included "\/" 3/12
-
-					$parts[0]="http://".substr($textpieces[$i],0,$len);
-					$parts[1]=substr($textpieces[$i],$len);
-					
-					if ($this->jumperURL_useId)	{
-						$this->theParts["plain"]["link_ids"][$i]=$parts[0];
-						$parts[0] = $this->jumperURL_prefix."-".$i;
-					} else {
-						$parts[0] = $this->jumperURL_prefix.$this->ux_translate_uri($parts[0]);
-               //                               $parts[0] = $this->jumperURL_prefix.rawurlencode($parts[0]);
-					}
-					$textstr.=$parts[0].$parts[1];
-				} else {
-					$textstr.='http://'.$textpieces[$i];
-				}				
-			}
-			$content = $textstr;
-		}
-		return $content;
-	}
-
-	function ux_translate_uri($uri) {	//rawurlencode only in between "/", do not rawurlencode the slash, 
-						//because if you do rawurlencode() over the whole URI, path separator characters '/' are also encoded and request will not happen to be correct.
-						//  '/' characters should not be encoded, only those parts in between.
-		$url_parts = explode('/', $uri);
-		for ($i = 0; $i < count($url_parts); $i++) {
-		$url_parts[$i] = rawurlencode($url_parts[$i]);
-
-		}
-		return implode('/', $url_parts);
-	}
-	function getExtendedURL($url)   {
-			// reads the URL or file and determines the Content-type by either guessing or opening a connection to the host
-		$res["content"] = $this->getURL($url);
-		if (!$res["content"])   {return false;}
-		$pathInfo = parse_url($url);
-		$fileInfo = $this->split_fileref($pathInfo["path"]);
-		if ($fileInfo["fileext"] == "gif")      {$res["content_type"] = "image/gif";}
-		if ($fileInfo["fileext"] == "jpg" || $fileInfo["fileext"] == "jpeg")    {$res["content_type"] = "image/jpeg";}
-		if ($fileInfo["fileext"] == "png") {$res["content_type"] = "image/png";}
-		if ($fileInfo["fileext"] == "html" || $fileInfo["fileext"] == "htm")    {$res["content_type"] = "text/html";}
-		if ($fileInfo["fileext"] == "swf")      {$res["content_type"] = "application/x-shockwave-flash";}
-		if (!$res["content_type"])      {$res["content_type"] = $this->getMimeType($url);}
-		return $res;
-	}
+	 
 	/**
 	 * Quoted-printable encoding modified by Martin Kutschker <Martin.Kutschker@activesolution.at>
 	 *
@@ -820,16 +695,6 @@ class dmailer extends t3lib_htmlmail {
 		}
 
 		return $newString;
-	}
-
-	/*
-	* @author	Bertrand Mure <bertrand.mure@worldonline.fr>
-	*
-	* This modification enables using CURL library functions when $TYPO3_CONF_VARS["SYS"]["curlUse"] = '1';
-	*/
-	function getURL($url)	{
-		$url = $this->addUserPass($url);
-		return t3lib_div::getURL($url);
 	}
 	
 	function fullQuoteStr($str, $table)     {
